--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,8 @@
   align-items: center;
   /* border-bottom: 1px solid #eee; */
   justify-content: center;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   background: white;
   z-index: 999;
