added footer, made navbar to hide and show on scroll and finalised the site

--- a/src/Community.css
+++ b/src/Community.css
@@ -1,7 +1,6 @@
 .community {
   margin-top: 130px;
   display: flex;
-  justify-content: center;
   flex-direction: column;
 }
 
@@ -32,32 +31,17 @@
 }
 
 .community-card-container {
-  max-width: 768px;
-  margin: 20px auto;
-  display: flex;
-  flex-wrap: wrap;
+  max-width: 100%;
+  margin: 50px 0;
+  grid-gap: 50px 40px;
+  display: grid;
+
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-@media only screen and (min-width: 1043px) {
+@media only screen and (max-width: 1224px) {
   .community-card-container {
-    max-width: 834px;
-  }
-}
-
-@media only screen and (max-width: 1043px) {
-  .community-card-container {
-    max-width: 556px;
-  }
-}
-
-@media only screen and (max-width: 694px) {
-  .community-card-container {
-    max-width: 508px;
-  }
-}
-
-@media only screen and (max-width: 634px) {
-  .community-card-container {
-    max-width: 254px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
