--- a/src/CommunityCard.css
+++ b/src/CommunityCard.css
@@ -1,23 +1,34 @@
 .community-card {
-  max-width: 238px;
+  max-width: 325px;
+  height: 390px;
   border-radius: 12px;
   display: flex;
   border: 1px solid #eee;
+  background: #fff;
   flex-direction: column;
+  position: relative;
   justify-content: space-between;
-  overflow: hidden;
-  box-shadow: 0 0 20px -5px #00000030;
-  margin: 30px 20px;
+  box-shadow: 0 0 20px -5px #00000020;
+  z-index: -1;
 }
 
-.community-card-cover {
-  height: 200px;
-  background-size: cover;
-  display: flex;
-  align-items: flex-end;
-  background-repeat: no-repeat;
+.community-card-images {
+  position: relative;
+}
+.community-card-images-cover {
+  width: 100%;
+  height: 15rem;
+  object-position: top;
+  border-radius: 12px 12px 0 0;
+  object-fit: cover;
 }
 
+.community-card-images-wave {
+  width: 100%;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+}
 .community-card-meta {
   padding: 5px 15px;
 }
@@ -57,7 +68,6 @@
 
 @media only screen and (max-width: 694px) {
   .community-card {
-    margin-left: 8px;
-    margin-right: 8px;
+    height: 420px;
   }
 }
