--- a/src/Header.css
+++ b/src/Header.css
@@ -2,12 +2,18 @@
   height: 64px;
   display: flex;
   align-items: center;
-  /* border-bottom: 1px solid #eee; */
+  transition: 0.2s linear;
+  transition-property: box-shadow, top;
+  box-shadow: 0 -30px 20px -5px #00000022;
   justify-content: center;
   position: fixed;
   width: 100%;
-  top: 0;
   background: white;
+}
+
+.header-border {
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 0 20px -5px #00000022;
 }
 
 .header-logo-container {
