--- a/src/Landing.css
+++ b/src/Landing.css
@@ -52,6 +52,8 @@
   border: 2px solid #303030;
   margin-top: 8px;
   transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  position: relative;
+  z-index: 2;
 }
 
 .landing-access-button:hover {
