--- a/src/Header.css
+++ b/src/Header.css
@@ -14,6 +14,7 @@
 .header-border {
   border-bottom: 1px solid #eee;
   box-shadow: 0 0 20px -5px #00000022;
+  top: 0 !important;
 }
 
 .header-logo-container {
